# stocky-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  TESTING_SUMMARY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
alembic/: env.py
alembic/versions/: 7893c84217f9_initial_migration.py  b4f781f67c01_add_shopping_lists_feature_tables.py  d68fadfe7373_add_upc_data_column.py  e63d32474c06_add_sessions_table.py
docs/: api-reference.md  backend-design.md  source-code-structure.md  system-brief.md  system-design.md
scripts/: demo_data.py  initial_data.py  test_runner.py
src/stocky-backend/: main.py
src/stocky-backend/api/: __init__.py  routes.py
src/stocky-backend/api/endpoints/: alerts.py  auth.py  locations.py  logs.py  skus.py  users.py
src/stocky-backend/core/: __init__.py  config.py
src/stocky-backend/crud/: __init__.py
src/stocky-backend/db/: __init__.py
src/stocky-backend/models/: __init__.py
src/stocky-backend/schemas/: __init__.py
src/stocky-backend/services/: __init__.py
src/stocky_backend/: __init__.py  main.py
src/stocky_backend/api/: routes.py
src/stocky_backend/api/endpoints/: alerts.py  auth.py  backup.py  items.py  locations.py  logs.py  scanner.py  shopping_lists.py  skus.py  users.py
src/stocky_backend/core/: auth.py  config.py  security.py
src/stocky_backend/crud/: __init__.py  crud.py  crud_new.py  crud_old.py
src/stocky_backend/db/: database.py
src/stocky_backend/models/: __init__.py  models.py
src/stocky_backend/schemas/: __init__.py  schemas.py
src/stocky_backend/services/: __init__.py  upc_background.py  upc_lookup.py
tests/: __init__.py  conftest.py  requirements-test.txt
tests/api/: __init__.py  test_auth_api.py  test_backup_api.py
tests/e2e/: __init__.py  test_user_workflows.py
tests/factories/: user_factory.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_database.py
tests/unit/: __init__.py  test_auth.py  test_models.py
tests/utils/: __init__.py  test_helpers.py
