[project]
name = "stocky-backend"
version = "0.2.1"
authors = [
    { name = "Stephen Bryant", email = "stephen@stephenbryant.net" },
]
description = "A home kitchen inventory management system."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "passlib[bcrypt]",
    "bcrypt",
    "python-jose[cryptography]",
    "websockets",
    "httpx",
    "email-validator",
    "python-multipart",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

