[project]
name = "stocky-backend"
version = "0.2.6"
authors = [
    { name = "Stephen Bryant", email = "stephen@stephenbryant.net" },
]
description = "A home kitchen inventory management system."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "bcrypt",
    "pyjwt[crypto]",
    "websockets",
    "httpx",
    "email-validator",
    "python-multipart",
]

[dependency-groups]
dev = [
    "coverage",
    "factory-boy",
    "freezegun",
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-html",
    "pytest-json-report",
    "pytest-mock",
    "pytest-xdist",
    "ruff",
]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stocky_backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
]
ignore = [
    "E402",  # module-import-not-at-top-of-file (needed for script path setup)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/stocky_backend/api/endpoints/backup.py" = ["S603", "S607"]  # admin-only subprocess calls
"src/stocky_backend/core/config.py" = ["S104", "S105"]  # Docker bind + default key placeholder
"src/stocky_backend/schemas/schemas.py" = ["S105"]  # "bearer" token type string

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = [
    "assignment",    # SQLAlchemy Column vs plain type — pervasive pre-existing pattern
    "override",      # CRUD subclass signatures override base — intentional
    "no-any-return", # CRUD base returns Any from ORM queries
    "arg-type",      # SQLAlchemy Column[str] vs str — pervasive ORM pattern
    "return-value",  # ORM query returns vs declared types
    "type-var",      # CRUDBase generic type args
    "union-attr",    # Optional result attribute access after None check
    "attr-defined",  # SQLAlchemy Result proxy attributes
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
minversion = "8.0"
addopts = [
    "--cov=src/stocky_backend",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests - isolated component testing",
    "integration: Integration tests - component interactions",
    "api: API tests - HTTP endpoint testing",
    "e2e: End-to-end tests - complete workflow testing",
    "slow: Slow running tests (>1 second)",
    "auth: Authentication and authorization tests",
    "database: Database related tests",
    "external: Tests that require external services",
    "security: Security focused tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

